feat: implement core ride request, SOS, and location services with frontend dashboard and tracking pages